add_library(util 
    util.h
    crc32.c
    crc32.h
    file.c
    file.h
    fmath.c
    fmath.h
    lists.h
    map.c
    map.h
    mem.c
    mem.h
    set.c
    set.h
    str.c
    str.h
    strcoll.c
    strcoll.h
    stream.c
    stream.h
    strbuf.c
    strbuf.h
    strings.c
    types.h
    vec.c
    vec.h)
    
target_include_directories(util INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)
